--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-tagmanager": "^2.1.15",
+    "gatsby-plugin-image": "^0.7.2",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-netlify-cms": "^4.1.26",
@@ -21,15 +22,15 @@
     "gatsby-plugin-postcss": "^2.1.13",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-sharp": "^2.12.2",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-tinacms": "^0.36.0",
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.25",
-    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-source-filesystem": "^2.9.1",
     "gatsby-transformer-remark": "^2.6.32",
-    "gatsby-transformer-sharp": "^2.3.2",
+    "gatsby-transformer-sharp": "^2.10.1",
     "gatsby-transformer-yaml": "^2.2.15",
     "google-map-react": "^1.1.6",
     "lodash": "^4.17.19",
